[package]
name = "http"
version = "0.1.0"
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ring = "0.16"
# rustls = "0.17"
# tokio-rustls = "0.13"
#hyper-rustls = "0.20"
#tokio-rustls = "0.8"  # Old version needed by tower-web.
#tower-web = { version = "0.3", features = ["rustls"] }

# async-trait = "0.1"
bytes = "0.5"
# function_name = "0.2"
futures = "0.3"
# http-body = "0.3"
# hyper = { version = "0.13", features = ["stream"] }
logging = { path = "../logging" }
nix = "0.18"
# rand = "0.7"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"] }
slog-scope = "4.3"
# slog-scope-futures = "0.1"
tokio = { version = "0.2", features = ["full"] }
# tokio-test = "0.2"
