[package]
name = "logging"
version = "0.1.0"
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0.4.11"
env_logger = "~0.7.1"
hostname = "~0.3.1"
log = "~0.4.8"
slog = { version = "~2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "~2.5.0"
slog-envlogger = "~2.2.0"
slog-json = "~2.3.0"
slog-scope = "4.3.0"
slog-stdlog = "~4.0.0"
